...
    	<View style = {styles.Separator}>
    	</View>

    	<View style = {styles.ButtonContainer}>

    		<AddButton
    			title = 'Challenge'
    			description = 'Send Challenge or Log Activity'
    			onPress = {onAddChallengePress}
    			imageUrl = 'https://i.imgur.com/ZIgWWQq.png'
    		>
    		</AddButton>
    	</View>
...
    		<View style = {styles.SeparatorLine}>
    		</View>
    	</View>

    	<View style = {styles.ButtonContainer}>
    		<AddButton
    			title = 'Friend'
    			description = 'Add a Friend'
    			onPress = {onAddFriendPress}
          imageUrl = 'https://i.imgur.com/eD1QEbq.png'
    		>
    		</AddButton>
    	</View>
...
    		<View style = {styles.SeparatorLine}>
    		</View>
    	</View>

    	<View style = {styles.ButtonContainer}>
    		<AddButton
    			title = 'League'
    			description = 'Create or Join League'
    			onPress = {onAddLeaguePress}
    			imageUrl = 'https://i.imgur.com/mvWXcvC.png'
    		>
    		</AddButton>

...
