...
  const renderRightActions = (progress, dragX, handler) => {
    if(pageTitle === 'suggested'){
      return (
        <View style={SharedStyles.RightSliderContainer}>
        <Pressable
          onPress={SendInvite}
          testID = 'send league group invite'
        >
          <Image style ={ImageStyles.AcceptOrDecline} source={{uri: 'https://imgur.com/JP8ae2t.png'}}/>
        </Pressable>   
      </View>
      )
      return null
...
