...
              <TextInput
                placeholder="Enter User ID"
                placeholderTextColor="grey"
                style={styles.Input}
                onChangeText={onFriendChange}
                value={friendID}
                testID = "enter id"
              >
              </TextInput>
              <View>
                <Pressable
                  onPress={goCameraViewPage}
                >
...
              <TouchableHighlight style={validID ? styles.ButtonValid : styles.ButtonInvalid}
                onPress={onSubmit}
                underlayColor='#013319'
                disabled={!validID}
                >
                <Text style={styles.RequestText} testID = {validID ? "valid send" : "invalid send"}>
                  Send Request
                </Text>
              </TouchableHighlight>
            </View>
          </View>
        </View>
    </View>
...
