...

  const addFriend = function(){
    return(
    <Pressable
      onPress={AddFriend}
      style = {{margin : "4%"}}
      testID = "add friend"
    >
      <Image style ={ImageStyles.AcceptOrDecline} source={{uri: 'https://imgur.com/ggWVwz6.png'}}/>
    </Pressable>
    )
  }

...
