...
import IssueChallenge from "../../components/add/issueChallenge";
import ProgressChallenge from "../../components/add/progressChallenge";
import GestureRecognizer from 'react-native-swipe-gestures';
function AddChallengePage(props): JSX.Element {

  const switchOptions = [
    {label: 'Send', value: 'issue'},
    {label: 'Log', value: 'progress'}
  ];

  const [pageType, setPageType] = useState(!props.route.params.defaultView ? "progress" : "issue");
  const [defaultTab, setDefaultTab] = useState(!props.route.params.defaultView)
  
  const [fromLeague, setFromLeague] = useState(props.route.params.fromLeague)
...
