...

function RecommendChallenge({updateInputs, setRecMessage}): JSX.Element {

  const [load, setLoad] = useState(false);
  const [exerciseIndex, setExerciseIndex] = useState(0);
  const [suggestedExercises, setSuggestedExercises] = useState([]);
  const [ButtonText, setButtonText] = useState('Recommend Challenge');


  const calculateDueDate = function(exercise){
    let issueDate = new Date(exercise.issueDate).valueOf();
    let originalDueDate = new Date(exercise.dueDate).valueOf();
    let dueDate = new Date(new Date().getTime() + (originalDueDate - issueDate));
...



  const handleRecommendPress = function(){
      if (suggestedExercises.length === 0) {
        updateInputs("NA");
        setRecMessage("We do not currently have enough data to recommend a challenge.");
        return;
      }
      console.log(suggestedExercises);
      setRecMessage(suggestedExercises[exerciseIndex].message);
      updateInputs(suggestedExercises[exerciseIndex].data);
      setExerciseIndex((exerciseIndex + 1) % suggestedExercises.length);
...
