...
  const EditClickable = function(){
    return(
      <TouchableHighlight
      onPress={handleEdit}
      style = {{borderTopLeftRadius : 20, borderTopRightRadius : 20}}
      underlayColor = 'rgba(0,0,0,0.15)'
      testID = 'league edit'
      >
        <View style = {{flexDirection : 'row', marginVertical : '2%'}} >
          <Text style = {[modalstyle.PopUpOptionText , {flex : 50}]}> Edit </Text>
          <Image style ={ImageStyles.Edit} source={{uri: 'https://imgur.com/tRs9SvT.png'}}/>
        </View>
      </TouchableHighlight>
...
  const DeleteClickable = function(){
    return(
      <TouchableHighlight
      onPress={handleDelete}
      style = {{borderBottomLeftRadius : 20, borderBottomRightRadius : 20}}
      underlayColor = 'rgba(0,0,0,0.15)'
      testID = 'league delete'
      >
        <View style = {{flexDirection : 'row', marginVertical : '2%'}} >
          <Text style = {[modalstyle.PopUpOptionText , {flex : 50, color : 'red'}]}> Delete </Text>
          <Image style ={ImageStyles.Edit} source={{uri: 'https://i.imgur.com/Tt2kctJ.png'}}/>
        </View>
      </TouchableHighlight>
...
            </View>
          </View>

          <View style = {[LeagueStyles.ToggleContainer]}>
            <Pressable
              onPress={handlePopup}
              testID = 'league options'
            >
              <Image style ={ImageStyles.Options} source={{uri: 'https://imgur.com/G0SHXKl.png'}}/>
            </Pressable>

            <View style = {LeagueStyles.ToggleContainer}>
              <SwitchSelector
...
