...
import InputForm from "../components/shared/InputForm";
import { createLeaguePictureURL } from '../components/Helpers/CloudinaryURLHelper';
import GestureRecognizer from 'react-native-swipe-gestures';

const switchOptions = [
  { label: 'Private', value: 'private' },
  { label: 'Public', value: 'public' }
];


function EditLeaguePage(props): JSX.Element {
  const [picture, setPicture] = useState(createLeaguePictureURL(props.route.params.leagueData._id));
  const [validPicture, setValidPicture] = useState(false);
...
              style={((validLeagueName && (leagueName !== oldleagueName)) || (validLeagueDesc && (leagueDesc !== oldleagueDesc)) || (oldsecurity !== security) || validPicture) ? styles.EnterButtonValid : styles.EnterButtonInvalid}
              disabled={!((validLeagueName && (leagueName !== oldleagueName)) || (validLeagueDesc && (leagueDesc !== oldleagueDesc)) || (oldsecurity !== security)|| validPicture)}
              underlayColor = '#013319'
              onPress={onSubmit}
            >
              <Text style={styles.ChoosePicText} testID = {((validLeagueName && (leagueName !== oldleagueName)) || (validLeagueDesc && (leagueDesc !== oldleagueDesc)) || (oldsecurity !== security) || validPicture) ? "Valid Edit" : "Invalid Edit"}>
                Submit
              </Text>
            </TouchableHighlight>
          </View>
        </View>
    </GestureRecognizer>
  )
...
