...

const options = [
  { label: "Members", value: 'all' },
  { label: "Received", value: 'pending' },
  { label: "Sent", value: 'sent' },
  { label: "Banned", value: 'banned' },
  { label: "Add User", value: 'invite' }
]

function getRequests() {
  return ([])
}

...
